Added in UPDATE one task and DELETE one task
